# ilcd2py

./: .gitignore  README.md  pyproject.toml
src/ilcd2py/: parse.py
tests/: conftest.py  test_parse.py
