[tool.poetry]
name = "ilcd2py"
version = "0.1.0"
description = ""
authors = ["Christian Kongsgaard <christian@kongsgaard.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-datafixtures = "^1.0.0"
pytest-env = "^0.8.1"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
